k8s/minio/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-network-policy
  namespace: minio
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from: # Allow ingress from ingress-nginx-public
        - namespaceSelector:
            matchLabels:
              kubernetes.io/instance: ingress-nginx-private
      ports:
        - protocol: TCP
          port: 9001  # minio console

    - from: # Allow MinIO cluster communication
        - podSelector:
            matchLabels:
              app: minio
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001

    - from: # Allow mlflow access
        - namespaceSelector:
            matchLabels:
              name: mlflow
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mlflow
      ports:
        - protocol: TCP
          port: 9000

  egress:
    - to: # Allow MinIO cluster communication
        - podSelector:
            matchLabels:
              app: minio
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001

    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
